--- a/index.html
+++ b/index.html
@@ -83,9 +83,11 @@
 
 		<!-- Projects Section -->
 		<div id="projects" class="row mt-5">
-			<h2 class="col-12 col-md-10 col-lg-8 mx-auto text-xl-center mb-3">Projects</h2>
+			<div class="col-12 mb-1 px-0">
+				<h2 class="col-12 col-md-10 col-lg-8 col-xl-6 mx-auto" class="text-xl-center">Projects</h2>
+			</div>
 			<!-- https://place-puppy.com/500x300 -->
-			<div class="project-group col-12 col-md-5 offset-md-1 col-lg-4 offset-lg-2">
+			<div class="project-group col-12 col-md-5 offset-md-1 col-lg-4 offset-lg-2 col-xl-3 offset-xl-3">
 				<div class="card border-0" >
 					<img src="images/capstone-1.png" class="card-img-top" alt="...">
 					<div class="card-body">
@@ -97,7 +99,7 @@
 				</div>
 			</div>
 
-			<div class="project-group col-12 col-md-5 col-lg-4">
+			<div class="project-group col-12 col-md-5 col-lg-4 col-xl-3">
 				<div class="card border-0" >
 					<img src="images/project-2.png" class="card-img-top" alt="...">
 					<div class="card-body">
@@ -109,7 +111,7 @@
 				</div>
 			</div>
 
-			<div class="project-group col-12 col-md-5 offset-md-1 col-lg-4 offset-lg-2">
+			<div class="project-group col-12 col-md-5 offset-md-1 col-lg-4 offset-lg-2 col-xl-3 offset-xl-3">
 				<div class="card border-0" >
 					<img src="images/project-3.png" class="card-img-top" alt="...">
 					<div class="card-body">
@@ -121,7 +123,7 @@
 				</div>
 			</div>
 
-			<div class="project-group col-12 col-md-5 col-lg-4">
+			<div class="project-group col-12 col-md-5 col-lg-4 col-xl-3">
 				<div class="card border-0" >
 					<img src="images/project-4.png" class="card-img-top" alt="...">
 					<div class="card-body">
@@ -137,26 +139,26 @@
 
 		<!-- Tools Section -->
 		<div id="tools" class="row mt-5" >
-			<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 mb-1">
-				<h2 class="text-xl-center">Tools</h2>
+			<div class="col-12 mb-1 px-0">
+				<h2 class="col-12 col-md-10 col-lg-8 col-xl-6 mx-auto" class="text-xl-center">Tools</h2>
 			</div>
-			<div class="col-12 col-md-5 offset-md-1 col-lg-4 offset-lg-2 ">
+			<div class="col-12 col-md-5 offset-md-1 col-lg-4 offset-lg-2 col-xl-3 offset-xl-3 ">
 				<h3 class="">Core Tools</h3>
 				<img src="images/logo-html5.png"/>
 				<img src="images/logo-css3.png"/>   
 				<img src="images/logo-javascript.png"/>
 			</div>
-			<div class="col-12 col-md-5 offset-md-1 col-lg-4 ">
+			<div class="col-12 col-md-5  col-lg-4 col-xl-3 ">
 				<h3 class="">Database</h3>
 				<img src="images/logo-mongodb.png"/>
 			</div>
-			<div class="col-12 col-md-5 offset-md-1 col-lg-4 offset-lg-2">
+			<div class="col-12 col-md-5 offset-md-1 col-lg-4 offset-lg-2 col-xl-3 offset-xl-3 ">
 				<h3 class="">Version Control and Collaboration</h3>
 				<img src="images/logo-git.png"/>
 				<img src="images/logo-gitlab-ci-cd.png"/>
 				<img src="images/logo-github.png"/>
 			</div>
-			<div class="col-12 col-md-5 offset-md-1 col-lg-4 ">
+			<div class="col-12 col-md-5  col-lg-4 col-xl-3 ">
 				<h3 class="">Servers and Deployment</h3>
 				<img src="images/logo-expressjs.png"/>
 				<img src="images/logo-heroku.png"/>
@@ -166,10 +168,10 @@
 
 		<!-- Contact section -->
 		<div id="contact" class="row  mt-5 mb-5">
-			<div class="col-12 col-md-10 offset-md-1 col-lg-8 text-xl-center offset-lg-2 mb-1">
-				<h2>Get In Touch</h2>
+			<div class="col-12 mb-1 px-0">
+				<h2 class="col-12 col-md-10 col-lg-8 col-xl-6 mx-auto" class="text-xl-center">Get In Touch</h2>
 			</div>
-			<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 ">
+			<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 col-xl-6 offset-xl-3">
 				<form class=" py-2">
 					<div class="row">
 						<div class="col-12 col-md-6 form-group">
